--- a/AmazonWeb/appsettings.json
+++ b/AmazonWeb/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Amazon;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=Amazon;Trusted_Connection=True;TrustServerCertificate=True",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=AmazonWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
